--- a/changes.txt
+++ b/changes.txt
@@ -15,7 +15,7 @@
 //DONE----------- the profile upload dosenot return any erorrs fix it
 //DONE----------- crate one time use pass token for ppl to sgin up
 //DONE----------- provent admin from going into agent pages
--  fix the include calss's at the head cuz sub pages is not working
+//DONE-----------  fix the include calss's at the head cuz sub pages is not working
 - add send images to the chat app
  -- upload image to images folder with a spechal name.jpg
  -- add a msg to the msgs table 
