--- a/changes.txt
+++ b/changes.txt
@@ -18,11 +18,14 @@
 //DONE----------- fix the include calss's at the head cuz sub pages is not working
 //DONE----------- Time in the attendance is not working at all its just so fucking crazy when converting string into date obj if it is 12:30 PM it gos into DB as 12:30 and then it shows on the attendance page as 12:30 AM
 //DONE----------- the admin alerts order is reversed new alerts are shoing up at the buttom of the list
+- crate an upload VER
 - add send images to the chat app
- -- upload image to images folder with a spechal name.jpg
- -- add a msg to the msgs table 
- -- the msg colume must be "img_img_img_'the spechal name'.jpg
+    -- upload image to images folder with a spechal name.jpg
+    -- add a msg to the msgs table 
+    -- the msg colume must be "img_img_img_'the spechal name'.jpg
 - the msg seen in the admin page dosenot reflect without refrashing the page
 - add a day off request or a 15 day's notice or a complaine secreet or public
 - add delet user for admin and reset the password 
 - add admin can delete a day in the attendance page
+- add viwe agent full profile at admin dashboard
+- add delet all msgs with agent or camp at admin chating page
